--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       steps:
       
         - name: Checkout code
-          uses: git pull
+          uses: actions/checkout@v2
 
 
         - name: Install dependencies
