Run npm start in the background in GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
             
         - name: start
           run: |
-            npm start
+            npm start &
           working-directory: ../testing-github-actions
 
             
