Update GitHub Actions to log output and change greeting message in user controller

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
             
         - name: start
           run: |
-            npm start &
+            nohup npm start > app.log 2>&1 &
           working-directory: ../testing-github-actions
 
             
