Add disown command to GitHub Actions workflow for npm start process

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,7 @@ jobs:
         - name: start
           run: |
             nohup npm start > app.log 2>&1 &
+            disown
           working-directory: ../testing-github-actions
 
             
