Add step to check if npm start process is running in GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,13 @@ jobs:
             disown
           working-directory: ../testing-github-actions
 
+        - name: Check if the process is running
+          run: |
+            ps aux | grep 'npm start'
+          working-directory: ../testing-github-actions
+
+
+
             
 
     
