Replace nohup with pm2 to manage npm start process in GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,8 +51,7 @@ jobs:
             
         - name: start
           run: |
-            nohup npm start > app.log 2>&1 &
-            disown
+            pm2 start npm --name "my-app" -- start
           working-directory: ../testing-github-actions
 
         - name: Check if the process is running
