Use nohup with pm2 to start npm process and add pm2 list check in GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,12 +51,14 @@ jobs:
             
         - name: start
           run: |
-            pm2 start npm --name "my-app" -- start
+            nohup pm2 start npm --name "my-app" -- start
+            disown
           working-directory: ../testing-github-actions
 
         - name: Check if the process is running
           run: |
             ps aux | grep 'npm start'
+            pm2 list
           working-directory: ../testing-github-actions
 
 
